[metadata]
name = pytest-remote-response
author = devanshshukla99
author_email = devanshshukla99@outlook.com
url = https://github.com/devanshshukla99/pytest-remote-response
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
    Topic :: Utilities
license = MIT
description = Pytest plugin for capturing and mocking connection requests.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    pytest>=4.6
    requests>=2.25.1
    aiohttp

[options.entry_points]
pytest11 =
    pytest_response = pytest_response.plugin

[options.packages.find]
exclude =
    tests

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  sphinx-changelog>=1.1.0rc1  # First to support towncrier 21.3

[flake8]
max-line-length = 110

[tool:pytest]
norecursedirs = ".tox" "*.egg-info"
minversion = 4.6
testpaths = tests

[coverage:run]
disable_warnings = no-data-collected
omit =
    */__init__*
    */_version.py
    tests/*
    */conftest.py
    *setup*

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
